<resources>
    <string name="app_name">HomeworkColormood</string>
    <string name="qu_te_hizo_sentir_as">¿Qué te hizo sentir así?</string>
    <string name="hoy_12_de_octubre">Hoy, 12 de Octubre</string>
    <string name="cu_ntame_m_s">Cuéntame más...</string>
    <string name="emoci_n_sentimiento">Emoción/Sentimiento</string>
    <string name="c_mara">Cámara</string>
    <string name="galer_a">Galería</string>
    <string name="agrega_una_foto_opcional">Agrega una foto (opcional)</string>
    <string name="omitir">Omitir</string>
    <string name="guardar_mi_d_a">Guardar Mi Día</string>
    <string name="nombre">Nombre</string>
    <string name="_00_a_os">00 Años</string>
    <string name="quitar">quitar</string>
    <string name="desc_go_back">Volver</string>
    <string name="usuario">Usuario</string>
    <string name="descripcion_imagen_preview">Vista previa de la imagen seleccionada</string>
    <string name="welcome_title">Bienvenido</string>
    <string-array name="welcome_messages"> // Lista de mensajes aleatorios de bienvenida
        <item>¡Hola! ¿Qué tal tu día?</item>
        <item>Bienvenido/a de nuevo.</item>
        <item>Explora y diviértete.</item>
        <item>¿Listo/a para elegir?</item>
        <item>Que tengas un día colorido.</item>
    </string-array>
</resources>